Fixed spacing between titles text

--- a/dev/scss/main.scss
+++ b/dev/scss/main.scss
@@ -420,10 +420,6 @@ footer {
                     width: 110px;
                 }
             }
-
-            br {
-                display: none;
-            }
         }
     }
 
